--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -7,7 +7,7 @@
 <ul>
     @foreach(var item in Model)
      {
-        <li>@item.Description <a asp-action="delete" asp-rout-id="@item.Id">Delete</a></li> 
+        <li>@item.Description <a asp-action="delete" asp-rout-id="@item.Id">delete</a></li> 
      }
     
 </ul>
